# ibm-390-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  ibm-390-emulator-c76bd42fede7b901.js  ibm-390-emulator-c76bd42fede7b901_bg.wasm  index.html
docs/: ai_agent_instructions.md
pages/: ibm-390-emulator-e6ce7e4a3891d779.js  ibm-390-emulator-e6ce7e4a3891d779_bg.wasm  index.html  layout-6323294fd52c412b.css
scripts/: build-pages.sh  build.sh  serve.sh
shared/: Cargo.toml
shared/src/: challenge.rs  lib.rs
src/: app.rs  assembler.rs  challenge.rs  lib.rs  wasm.rs
src/cpu/: executor.rs  instruction.rs  mod.rs  state.rs
